

[tool.coverage.run]
source = ["dfi"]

[tool.mypy]
exclude = ["^docs/"]
disable_error_code = ["name-defined"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
pretty = true
show_column_numbers = true
show_error_context = true
show_error_end = true
warn_return_any = true
warn_unreachable = true


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
py_version = "310"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
src_paths = ["./dfi", "./tests"]
skip_glob = ["ci/cache"]


[tool.pylint.'BASIC']
good-names= ["df", "fp"]

[tool.pylint.'MASTER']
jobs = 0       # use all cores
fail-under = 9

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

disable = [
  "C0116", # missing-docstring
  "C0301", # line-too-long
  "W1401", # anomalous-backslash-in-string
  "R1735", # use-dict-literal
]

[tool.pylint.'MISCELLANEOUS']
notes = [
  "TODO",
  "FIXME",
  "XXX",
] # List of note tags to take in consideration, separated by a comma.

[tool.poetry]
name = "dfipy"
# Package versions are derived from Git tags in CI and overridden during
# building/publishing. See build/publish jobs in .gitlab-ci.yml.
# Keep the following version at 0.0.0 as it is not used anyway.
version = "0.0.0"
description = "DFI api python wrapper"
authors = [
  "Maurizio Morriello <maurizio.morriello@generalsystem.com>",
  "Sebastiano Ferraris <sebastiano.ferraris@generalsystem.com>",
]
readme = "README.md"
homepage = "https://www.generalsystem.com/"
repository = "https://github.com/thegeneralsystem/dfipy"
documentation = "https://dfipy.docs.generalsystem.com/"
include = ["LICENCE"]
packages = [{ include = "dfi" }]

[tool.poetry.dependencies]
pandas = "^2.0.1"
python = "^3.10"
requests = "^2.30.0"
setuptools = "^67.8.0"
sseclient-py = "^1.7.2"
tqdm = "^4.65.0"
urllib3 = "2.0.7"
pylance = "^0.8"
pytest-dotenv = "^0.5.2"
pyarrow = "14.0.1"

# Dev
[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylance = "^0.8"
pylint = "^2.17.4"
pytest = "^7.2.2"
pytest-order = "^1.1.0"
ipykernel = "^6.25.2"
truststore = "^0.8.0"

# Docs
pytest-dependency = "^0.5.1"
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst_parser = "^2.0.0"
pydata-sphinx-theme = "^0.13.3"
sphinx = "^7.0.1"
sphinx-autodoc2 = "^0.4.2"
sphinx-favicon = "^1.0.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
